[package]
name = "gkit-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
stabby = { workspace = true, features = ["libloading"] }
libloading = { workspace = true }

[features]
default = ["plugin"]
plugin = []

[lib]
crate-type = ["lib", "staticlib", "cdylib"]