[package]
name = "gkit-media-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
gkit-core.workspace = true
gkit-media.workspace = true
gkit-plugin-webrtc-web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["Window"] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]
