[package]
name = "gkit-media"
version.workspace = true
edition.workspace = true

[features]
default = ["backend-native", "plugin"]
backend-native = ["dep:ctor"]
plugin = []

[dependencies]
stabby.workspace = true
ctor = { version = "0.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gkit-core = { workspace = true, features = ["plugin"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gkit-core = { workspace = true, default-features = false }
web-sys = { version = "0.3", features = ["Window"] }
js-sys = "0.3"
wasm-bindgen = "0.2"

[build-dependencies]
ureq = { version = "2", features = ["tls"] }
zip = "0.6"
flate2 = "1"
tar = "0.4"
cc = "1.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dev-dependencies]
eframe = "0.30"
egui = "0.30"
image = { version = "0.25", default-features = false, features = ["bmp"] }
webrtc = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
bytes = "1"
libloading = "0.8"
webrtc-util = { version = "0.17", features = ["vnet"] }