[package]
name = "gkit-vcpkg"
version.workspace = true
edition.workspace = true
description = "GenericKit vcpkg integration tool — find, install, export vcpkg packages"

[[bin]]
name = "gkit-vcpkg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
