[package]
name = "gkit-plugin-webrtc-web-sys"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
gkit-media.workspace = true
ctor = "0.2"
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = [
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcSessionDescriptionInit",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcSdpType",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcPeerConnectionState",
    "RtcSignalingState",
    "RtcIceGatheringState",
    "RtcDataChannelState",
    "RtcRtpSender",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlVideoElement",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "VideoTrack",
    "Window",
    "Document",
    "RtcTrackEvent",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
